--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -23,7 +23,7 @@ Nue Blog
     <div class="container">
         <div class="row">
             {% for post in posts %}
-            <div class="col-md-3">
+            <div class="col-md-3 flexed">
                 <a class="text-dark" href="{{post.get_absolute_url}}">
                     <div class="card mb-5">
                         <img class="card-img-top post-image" src="{{ post.image.url }}" alt="{{ post.title }}">
